# RYS-Brainscanner

./: .gitignore  README.md  pyproject.toml  scan_results.json
brainscan/: __init__.py  cli.py  relayer.py  scanner.py  schema.py
brainscan/backends/: exllama_backend.py  hf_backend.py
brainscan/scoring/: __init__.py
datasets/: eq_16.json  manifest.json  pubmedqa_100.json  pubmedqa_16.json
llmri/: __init__.py  cli.py  scanner.py  schema.py  utils.py
llmri/backends/: __init__.py  exllama_backend.py  hf_backend.py
llmri/scoring/: eq_scorer.py  pubmedqa_scorer.py
model_scans/: Qwen2-5-Instruct-3B.json  llama3-1_8B_instruct.json  llama3-2-Instruct-3B.json
